# -

./: .cursorrules  .gitignore  .rawrxd_agent_config.json  .tmp_check_conflicts.py  .tmp_check_parse.py  .tmp_dump_repr.py  .tmp_gen_final.py  .tmp_gen_final2.py  .tmp_pr14_checks.json  14_DAY_EXECUTIVE_SUMMARY.md  14_DAY_PRODUCTION_FINISHERS_PLAN.md  ADOBE_RGBA_VSU_IMPLEMENTATION.md  AGENTIC_CAPABILITIES_README.md  AGENTPANEL_CRASH_INSTRUMENTATION.md  AGENTPANEL_INSTRUMENTATION_SUMMARY.md  AGENT_CONTROLLER_INTEGRATION_GUIDE.md  AICompletionIntegration.asm  AI_FEATURES_IMPLEMENTATION_SUMMARY.md  AI_FEATURES_SUMMARY.md  AI_Integration.cpp  AI_Orchestrator_Test.asm  AI_TokenStream.cpp  AI_TokenStream.hpp  AI_TokenStream_Test.cpp  APRIL_12_SESSION_SUMMARY.md  ASYNC_BATCHING_PERFORMANCE_ANALYSIS.md  AUDIT_FULL_IDE_FEATURES.md  AUDIT_REPORT.md  AUDIT_REPORT_IDE_COMPLETENESS.md  AUDIT_SUMMARY_FOR_TRACKER.md  AUDIT_TRACKER.json  AUDIT_TRACKER.md  AdvancedEditorCore_Production.h  ArchitectureEnhancementEngine.psm1  BACKEND_ERROR_RESOLUTION.md  BATCH_15_COMPLETE.md  BLOAT_AUDIT_FINAL_REPORT.md  BOTH_TRES_FINAL_SUMMARY.md  BOTH_TRES_IMPLEMENTATION_SUMMARY.md  BUILD_INSTRUCTIONS.md  (+489 more)
UEC-X/: CMakeLists.txt
UEC-X/protocol/: jsonrpc_protocol.h
UEC-X/specs/: UEC_PROTOCOL_SPEC.md
generator/: CMakeLists.txt  ast.cpp  ast.hpp  build.sh  code_builder.cpp  code_builder.hpp  file_emitter.cpp  file_emitter.hpp  generator.cpp  generator.hpp  main.cpp  schema_parser.cpp  schema_parser.hpp
security-workflow-automation/: .secflow_drow_state.json  README.md  incident.sample.json  pyproject.toml
security-workflow-automation/secflow_automation/: __init__.py  actions.py  cli.py  engine.py  gui.py  ide_controller.py  ide_runtime.py  models.py  policy.py  security.py
security-workflow-automation/tests/: test_engine.py  test_security_and_controller.py
sovereign_streamer_build/: CMakeLists.txt
sovereign_streamer_build/src/: main.cpp  sovereign_streamer.cpp  sovereign_streamer.h
src/agent_puppeteer/: CMakeLists.txt  INTEGRATION.md  agent_puppeteer.cpp  agent_puppeteer.hpp  agent_puppeteer_bridge.ts  agent_puppeteer_example.cpp  agent_puppeteer_test.cpp
src/ai/: CMakeLists.txt  COPILOT_PIPELINE_README.md  FINAL_PRODUCTION_PIPELINE_README.md  PRODUCTION_PIPELINE_README.md  RawrXD_AI_Core.asm  SESSION_SUMMARY.md  SovereignCursor.cpp  SovereignCursor.h  SovereignVectorStore.cpp  SovereignVectorStore.h  adaptive_debounce.cpp  adaptive_debounce.h  ai_architecture_validator_integration.cpp  ai_architecture_validator_integration.hpp  ai_assistant_engine.cpp  ai_assistant_engine.h  ai_chat_assistant.cpp  ai_code_generator.cpp  ai_code_review.cpp  ai_completion_engine.cpp  ai_completion_provider_real.cpp  ai_completion_provider_real.hpp  ai_debug_assistant.cpp  ai_debugger.cpp  ai_ide_integration.cpp  ai_ide_integration.h  ai_inference_real.cpp  ai_inference_real.h  ai_inline_editor.cpp  ai_model_caller_internal.cpp  ai_model_caller_internal.h  ai_model_caller_real.cpp  ai_model_caller_unified.cpp  ai_refactoring_engine.cpp  ai_smart_completion.cpp  ai_test_generator.cpp  ai_ui_integration.cpp  ai_unified_engine.cpp  apocalyptic_spec_decoder.h  architecture_consistency_validator.cpp  (+96 more)
src/ast_parser/: ASTContextProvider.cpp  ASTContextProvider.h  CMakeLists.txt  ast_parser_smoke_test.cpp  compile.bat  standalone_test.cpp
src/autocomplete_integration/: CMakeLists.txt  UnifiedAutocompleteEngine.cpp  UnifiedAutocompleteEngine.h  unified_autocomplete_smoke_test.cpp
src/completion/: AdaptiveFusionEngine.cpp  AdaptiveFusionEngine.h  CMakeLists.txt  FeedbackListener.cpp  FeedbackListener.h  completion_ranking_kernel.cpp  completion_ranking_kernel.hpp  completion_router.cpp  completion_router.h  completion_router_test.cpp  smart_completion.cpp  smart_completion.h  smart_completion_test.cpp
src/core/: 70b_gguf_hotpatch.cpp  70b_gguf_hotpatch.h  BounceTPS.cpp  CMakeLists.nexus.txt  CMakeLists.txt  CMakeLists_native_ide_tools.txt  ConfigurationValidator.cpp  ConfigurationValidator.h  ContextFusionEngine.cpp  ContextFusionEngine.h  ContextFusionWiring.cpp  ContextFusionWiring.h  CustomSyntaxEditor.cpp  CustomSyntaxEditor.h  Direct2D_HeatmapRenderer.cpp  Direct2D_HeatmapRenderer.hpp  DiskRecoveryAgent.cpp  EditorEngineFactory.cpp  FailureModeFirewall.cpp  HOTPATCH_PLAYBACK_README.md  HardwareScout.cpp  HardwareScout.h  MonacoCoreEngine.cpp  NativeGGUFLoader.h  PendingEditReviewGate.cpp  PendingEditReviewGate.hpp  RawrXD_FeatureRegistry.cpp  RichEditEditorEngine.cpp  SovereignTextBuffer.h  StagedVramPacer.cpp  StagedVramPacer.h  VulkanMemoryManager.h  WebView2Container.cpp  WebView2Container.h  WebView2EditorEngine.cpp  _test_uhm_include.cpp  accelerator_router.cpp  accelerator_router.h  address_hotpatcher.hpp  agent_completion.h  (+493 more)
src/debug/: BreakpointGutter.cpp  BreakpointGutter.hpp  CMakeLists.txt  DAPAdapter.cpp  DAPAdapter.hpp  DAPServer.cpp  DAPTransport.hpp  DAPTypes.hpp  DapService.cpp  DapService.hpp  DapService_test.cpp  DebugBackend.cpp  DebugBackend.h  (+27 more)
tests/: AgentBridge_Harness.cpp  CMakeLists.txt  CTestTestfile.cmake  MiniMonacoIntegrationTest.cpp  PRE_RELEASE_VERIFICATION_REPORT.md  RELEASE_SUMMARY_v1.0.0-gold.md  SentinelStressTest.cpp  SovereignBenchmarkTest.cpp  agentic_repair_stress_test.cpp  api_gateway_tests.cpp  ast_scope_awareness_test.cpp  ast_scope_awareness_validation.cpp  ast_scope_validation_real.cpp  autonomy_smoke_test.cpp  bench_vector_search.cpp  benchmark_fused_decode_fp8.cpp  benchmark_kernel.cpp  build_benchmark.bat  cache_manager_tests.cpp  code_review_tests.cpp  compile_ast_test.bat  config_manager_tests.cpp  dependency_manager_tests.cpp  escalate_to_swarm_verification.cpp  exotic_spec_bench.cpp  fast_spec_bridge_smoke.cpp  fast_spec_throughput_bench.cpp  feature_demo.cpp  feature_flags_tests.cpp  ffi_validation.py  fp8_scalar_vs_avx2_bench.cpp  gguf_link_stubs.cpp  ghost_text_runtime_smoke.cpp  header_only_integration.hpp  inference_retry_shim_smoke.cpp  integration_test_suite.cpp  integration_tests.cpp  kv_cache_credit_bridge_test.cpp  main.cpp  metrics_collector_tests.cpp  (+87 more)
(+11482 files in other folders)
